--- a/src/index.css
+++ b/src/index.css
@@ -59,31 +59,31 @@ input[type='time'] {
 	box-sizing: border-box;
 }
 
-.cita {
+.appoint {
 	padding: 2rem;
 	background: white;
 	border-bottom: 1px solid #e1e1e1;
 	color: black;
 }
 
-.cita p {
+.appoint p {
 	font-weight: bold;
 	margin-bottom: 0.8rem;
 }
-.cita p span {
+.appoint p span {
 	font-weight: normal;
 }
-.cita:first-of-type {
+.appoint:first-of-type {
 	border-top-left-radius: 1rem;
 	border-top-right-radius: 1rem;
 }
-.cita:last-of-type {
+.appoint:last-of-type {
 	border-bottom-left-radius: 1rem;
 	border-bottom-right-radius: 1rem;
 }
-.button.eliminar,
-.button.eliminar:hover {
-	background-color: #c10059;
+.button.eliminate,
+.button.eliminate:hover {
+	background-color: #006ac1;
 	color: white;
 	margin-top: 2rem;
 }
